(lang dune 3.8)

(using melange 0.1)

;; Change the name to the name of your-project
(name melange-template)

(license "MIT")

(maintainers "your_name")

(authors "your_name")

;; Change to your Github Project URL
(homepage https://github.com/your/project)
(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name melange-template)
 (synopsis "Melange project")
 (description "Minimal melange project"))
